k8s.yaml
# Deployment mysql
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init
          configMap:
            name: config
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---
# Service mysql
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geeks-task-service
                port:
                  number: 8080
